# aidememo

./: .claude.md  .codex.md  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPARE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  PLAN.md  POSITIONING.md  PRODUCT_ROADMAP.md  README.ko.md  README.md  SECURITY.md  SUPPORT.md  audit.toml  lefthook.yml  mise.toml
.claude/: settings.example.json  settings.json
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.notes/: agent-ux-design-decisions.md  bench-3way.md  bench-accuracy.md  bench-beads-design.md  bench-beads-results.md  bench-dim-sweep.md  bench-embed-model-sweep.md  bench-hnsw-integrated.md  bench-hnsw.md  bench-korean.md  bench-longmemeval.md  bench-miracl-ko.md  bench-mlx-ane-research.md  bench-rerank-miracl-ko.md  bench-small-model.md  bench-tei-overhead.md  bench_gold_easy.jsonl  bench_gold_easy_ko.jsonl  bench_gold_hard.jsonl  bench_gold_hard_ko.jsonl  bench_gold_para_ko.jsonl  compare-beads.md  compare-graphiti.md  compare-omega.md  e2e-multi-agent.md  omega-pipeline-analysis.md  overview-eval.md  (+4 more)
benchmarks/: Cargo.toml
benchmarks/fixtures/: longmemeval_tiny.json
benchmarks/gbrain-evals-adapter/: README.md  RESULTS.md  aidememo-adapter.ts  wg-adapter.ts
benchmarks/results/: README.md  performance.json  storage_backend_probe.json
benchmarks/src/: lib.rs
crates/aidememo-cli/: Cargo.toml  build.rs
crates/aidememo-cli/src/: main.rs  output.rs
crates/aidememo-cli/src/cmd/: adapt.rs  artifacts.rs  auth.rs  bench.rs  completions.rs  daemon.rs  doctor.rs  edit.rs  feedback.rs  graph.rs  handoff.rs  init.rs  installation.rs  mcp_install.rs  mcp_serve.rs  mcp_stdio.rs  mcp_tools.rs  memprobe.rs  mod.rs  model.rs  project.rs  recent.rs  skill.rs  watch.rs
crates/aidememo-cli/src/cmd/pending/: mod.rs  tui.rs
crates/aidememo-cli/tests/: integration_install.rs
crates/aidememo-core/: Cargo.toml
crates/aidememo-core/src/: adapt.rs  archive.rs  backend.rs  backup.rs  branch.rs  config.rs  embedding.rs  error.rs  extract.rs  extract_structured.rs  fuzzy.rs  graph.rs  index.rs  ingest.rs  lib.rs  lint.rs  migrate.rs  privacy.rs  relations.rs  rerank.rs  s3.rs  search.rs  sqlite_store.rs  store.rs  sync.rs  time.rs  types.rs  vector_index.rs  wal.rs
crates/aidememo-core/tests/: gac_pipeline.rs  typed_relations.rs
crates/aidememo-core/tests/fixtures/typed-relations/: decisions.md
crates/aidememo-ffi/: Cargo.toml  README.md
crates/aidememo-ffi/example/: smoke.c
crates/aidememo-ffi/include/: aidememo.h
crates/aidememo-ffi/src/: lib.rs
crates/aidememo-napi/: Cargo.toml  README.md  package.json
crates/aidememo-napi/npm/aidememo-napi-darwin-arm64/: README.md  package.json
crates/aidememo-napi/npm/aidememo-napi-darwin-x64/: README.md  package.json
crates/aidememo-napi/npm/aidememo-napi-linux-arm64-gnu/: README.md  package.json
crates/aidememo-napi/npm/aidememo-napi-linux-x64-gnu/: README.md  package.json
crates/aidememo-napi/npm/aidememo-napi-win32-x64-msvc/: README.md  package.json
crates/aidememo-napi/src/: lib.rs
crates/aidememo-napi/tests/: smoke.js
crates/aidememo-nif/: Cargo.toml  README.md  mix.exs
crates/aidememo-nif/lib/: aidememo_nif.ex
crates/aidememo-nif/lib/aidememo_nif/: native.ex
crates/aidememo-nif/src/: lib.rs
crates/aidememo-nif/test/: aidememo_nif_test.exs
crates/aidememo-python/: Cargo.toml  README.md  pyproject.toml
crates/aidememo-python/src/: lib.rs
crates/aidememo-python/tests/: smoke.py
crates/model2vec-native/: Cargo.toml  LICENSE-MIT  README.md
crates/model2vec-native/src/: lib.rs  weights.rs
crates/model2vec-native/tests/: smoke.rs
crates/wg-cli/: Cargo.toml
crates/wg-cli/src/: main.rs  output.rs
crates/wg-cli/src/cmd/: adapt.rs  auth.rs  bench.rs  completions.rs  daemon.rs  doctor.rs  edit.rs  feedback.rs  graph.rs  init.rs  mcp_install.rs  mcp_serve.rs  mcp_stdio.rs  mcp_tools.rs  memprobe.rs  mod.rs  model.rs  project.rs  recent.rs  skill.rs  watch.rs
crates/wg-cli/src/cmd/pending/: mod.rs  tui.rs
crates/wg-cli/tests/: integration_install.rs
crates/wg-core/: Cargo.toml
crates/wg-core/src/: adapt.rs  archive.rs  config.rs  embedding.rs  error.rs  extract.rs  extract_structured.rs  fuzzy.rs  graph.rs  index.rs  ingest.rs  lib.rs  lint.rs  migrate.rs  relations.rs  rerank.rs  s3.rs  search.rs  store.rs  sync.rs  time.rs  types.rs  vector_index.rs  wal.rs
crates/wg-core/tests/: gac_pipeline.rs  typed_relations.rs
crates/wg-core/tests/fixtures/typed-relations/: people.md  redis.md
crates/wg-ffi/: Cargo.toml  README.md
crates/wg-ffi/example/: smoke.c
crates/wg-ffi/include/: wg.h
crates/wg-ffi/src/: lib.rs
crates/wg-napi/: Cargo.toml  README.md  package.json
crates/wg-napi/npm/wg-napi-darwin-arm64/: package.json
crates/wg-napi/npm/wg-napi-darwin-x64/: package.json
crates/wg-napi/npm/wg-napi-linux-arm64-gnu/: package.json
crates/wg-napi/npm/wg-napi-linux-x64-gnu/: package.json
crates/wg-napi/npm/wg-napi-win32-x64-msvc/: package.json
crates/wg-napi/src/: lib.rs
crates/wg-napi/tests/: smoke.js
crates/wg-nif/: Cargo.toml  README.md  mix.exs
crates/wg-nif/lib/: wg_nif.ex
crates/wg-nif/lib/wg_nif/: native.ex
crates/wg-nif/src/: lib.rs
crates/wg-nif/test/: wg_nif_test.exs
crates/wg-python/: Cargo.toml  README.md  pyproject.toml
crates/wg-python/src/: lib.rs
crates/wg-python/tests/: smoke.py
plugins/hermes/: README.md  pyproject.toml
plugins/hermes/src/hermes_aidememo/: __init__.py  capture_adapter.py  cli.py  client.py  decisions.py  hooks.py  pending.py  plugin.py  plugin.yaml  sdk.py  slash.py  tools.py
plugins/hermes/src/hermes_aidememo/skills/aidememo/: SKILL.md
plugins/hermes/src/hermes_wg/: __init__.py  cli.py  client.py  decisions.py  hooks.py  pending.py  plugin.py  plugin.yaml  sdk.py  slash.py  tools.py
plugins/hermes/src/hermes_wg/skills/wg/: SKILL.md
plugins/hermes/tests/: conftest.py  test_capture_adapter.py  test_client.py  test_decisions.py  test_pending.py  test_plugin.py  test_sdk.py
(+272 files in other folders)
