[workspace]
resolver = "2"
members = [
    "crates/wg-core",
    "crates/wg-cli",
    "benchmarks",
    "crates/wg-napi",
    "crates/wg-python",
    "crates/wg-ffi",
    "crates/wg-nif",
]
exclude = [
    # Local fork of tokenizers; consumed via [patch.crates-io] below.
    # Keep it out of our workspace because it's an independent crate
    # with its own edition/lints we don't want to override.
    "vendor/tokenizers",
]
# Native addon / Python extension crates are now part of the workspace build.

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["WikiGraph Team"]
description = "Wiki-Graph: Structured index engine for LLM wikis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taeyun16/wg"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "warn"
dbg_macro = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = false

# Optimized build that keeps debuginfo + symbols. Use this for
# heap/CPU profiling — `cargo build -p wg-cli --release-debug --features dhat-heap`.
# dhat needs unstripped frames to attribute allocations correctly.
[profile.release-debug]
inherits = "release"
debug = "full"
strip = false
lto = false        # full LTO inlines through allocations and confuses dhat
codegen-units = 16

# Local fork of tokenizers 0.20.4 with one upstream-bound fix:
#  - models/unigram/model.rs: HashMap::new() → with_capacity(n)
# Vendored under vendor/tokenizers; the upstream PR is tracked outside
# the public measurement docs.
[patch.crates-io]
tokenizers = { path = "vendor/tokenizers" }
