[workspace]
resolver = "2"
members = [
    "crates/aidememo-core",
    "crates/aidememo-cli",
    "benchmarks",
    "crates/aidememo-napi",
    "crates/aidememo-python",
    "crates/aidememo-ffi",
    "crates/aidememo-nif",
]
exclude = [
    # Local fork of tokenizers; consumed via [patch.crates-io] below.
    # Keep it out of our workspace because it's an independent crate
    # with its own edition/lints we don't want to override.
    "vendor/tokenizers",
]
# Native addon / Python extension crates are now part of the workspace build.

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["AideMemo Team"]
description = "AideMemo: local-first memory SDK for coding agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taeyun16/aidememo"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "warn"
dbg_macro = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = false

# Optimized build that keeps debuginfo + symbols. Use this for
# heap/CPU profiling — `cargo build -p aidememo-cli --release-debug --features dhat-heap`.
# dhat needs unstripped frames to attribute allocations correctly.
[profile.release-debug]
inherits = "release"
debug = "full"
strip = false
lto = false        # full LTO inlines through allocations and confuses dhat
codegen-units = 16

# Local fork of tokenizers 0.22.2 for the optional fastembed provider, with two
# allocation-focused fixes. The default Model2Vec path uses tokenizers 0.21.4.
#  - models/unigram/model.rs: pre-size the token map from vocab.len()
#  - models/unigram/trie.rs: replace per-node AHashMap children with packed Vecs
# `vendor/tokenizers` is a repo-root symlink to the Python package's vendored
# copy. That keeps the Cargo patch path stable while letting maturin include
# the same build sources in the Python sdist as `vendor/tokenizers`.
[patch.crates-io]
tokenizers = { path = "vendor/tokenizers" }
