[package]
name = "wg-benchmarks"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
criterion = "0.5"
parking_lot = "0.12"
redb = "2.6"
tempfile = "3.10"
wg-core = { path = "../crates/wg-core", features = ["semantic"] }

# HNSW ANN prototype — measures recall + latency vs brute force on
# real Korean Wikipedia retrieval (MIRACL/ko). Lives behind the
# `--bin hnsw_miracl` target so it doesn't affect the criterion bench
# suite or the workspace's release build.
instant-distance = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simsimd = "6"

[[bin]]
name = "hnsw_miracl"
path = "src/bin/hnsw_miracl.rs"

[[bin]]
name = "hnsw_timing"
path = "src/bin/hnsw_timing.rs"

[[bin]]
name = "hnsw_rebuild_cache"
path = "src/bin/hnsw_rebuild_cache.rs"

[[bin]]
name = "performance"
path = "src/bin/performance.rs"

[[bin]]
name = "lint_profile"
path = "src/bin/lint_profile.rs"

[[bin]]
name = "fsync_probe"
path = "src/bin/fsync_probe.rs"

[[bin]]
name = "search_profile"
path = "src/bin/search_profile.rs"
