[package]
name = "aidememo-benchmarks"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
criterion = "0.5"
parking_lot = "0.12"
redb = "2.6"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
tempfile = "3.10"
aidememo-core = { version = "0.1.0", path = "../crates/aidememo-core", features = ["semantic", "fastembed"] }

# HNSW ANN prototype — measures recall + latency vs brute force on
# real Korean Wikipedia retrieval (MIRACL/ko). Lives behind the
# `--bin hnsw_miracl` target so it doesn't affect the criterion bench
# suite or the workspace's release build.
instant-distance = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simsimd = "6"
# Concurrent LLM-extract for the longmemeval bench. Sessions are
# extracted via a thread pool so a 500q --llm-extract run doesn't
# spend ~43h serialising sequential ureq calls.
rayon = "1.10"
chrono = "0.4"  # Anchor for relative-date extraction in retrieval emit

[[bin]]
name = "hnsw_miracl"
path = "src/bin/hnsw_miracl.rs"

[[bin]]
name = "hnsw_timing"
path = "src/bin/hnsw_timing.rs"

[[bin]]
name = "hnsw_rebuild_cache"
path = "src/bin/hnsw_rebuild_cache.rs"

[[bin]]
name = "performance"
path = "src/bin/performance.rs"

[[bin]]
name = "lint_profile"
path = "src/bin/lint_profile.rs"

[[bin]]
name = "fsync_probe"
path = "src/bin/fsync_probe.rs"

[[bin]]
name = "storage_backend_probe"
path = "src/bin/storage_backend_probe.rs"

[[bin]]
name = "search_profile"
path = "src/bin/search_profile.rs"

[[bin]]
name = "miracl_ingest"
path = "src/bin/miracl_ingest.rs"

[[bin]]
name = "miracl_rerank_bench"
path = "src/bin/miracl_rerank_bench.rs"

[[bin]]
name = "miracl_model_sweep"
path = "src/bin/miracl_model_sweep.rs"

[[bin]]
name = "longmemeval"
path = "src/bin/longmemeval.rs"
