[package]
name = "aidememo-cli"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "aidememo"
path = "src/main.rs"

[dependencies]
aidememo-core = { version = "0.1.0", path = "../aidememo-core", default-features = false, features = ["semantic", "semantic-adapt"] }

# Profile-mode measurement for `aidememo bench`.
# - memory-stats: cross-platform RSS (includes virtual mappings — useful as a
#   broad upper bound but overstates real memory on mmap-heavy workloads).
# - cpu-time: process-level CPU user time.
# - peak_alloc: instruments the GlobalAlloc to track Rust heap-only bytes —
#   isolates application allocations from mmaped artifacts (model weights,
#   simsimd shared libs).
memory-stats = "1.2"
cpu-time = "1.0"
peak_alloc = "0.3"

# Heap profiler. Off by default — enable with `--features dhat-heap` to
# build a binary that emits dhat-heap.json with full alloc backtraces.
# When this feature is on, peak_alloc is replaced as the global
# allocator (only one #[global_allocator] is allowed at link time).
dhat = { version = "0.3", optional = true }

bpaf = { version = "0.9", features = ["derive", "autocomplete"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.0"
ulid = "1.1"
tempfile = "3.10"
walkdir = "2.4"
notify = "6.1"
dirs = "6.0"
toml = "0.8"

# `aidememo pending review` TUI. Pinned to the same versions our other
# CLI tools track so we don't fragment terminal handling.
ratatui = "0.30"
crossterm = "0.29"

# Async runtime + HTTP (for MCP server)
tokio = { version = "1.35", features = ["full"] }
axum = "0.8"
tokio-stream = "0.1"

# HTTP client — only used by `aidememo search --via` to talk to a running
# `aidememo mcp-serve` daemon (single POST per CLI invocation, no async).
ureq = { version = "2.12", features = ["json"] }

# Logging — aidememo-core uses the tracing facade; the CLI binary installs a
# subscriber. EnvFilter reads the standard RUST_LOG (and falls back to
# the AIDEMEMO_LOG alias for users who'd rather not set RUST_LOG globally).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OS-native physical-memory metrics. macOS reports phys_footprint
# (compressed + swapped, excludes shared mmap pages); Linux exposes
# RssAnon via /proc/self/status, which excludes mmap'd files.
# Keep this target-specific block at the END of the manifest — TOML
# section headers consume all keys until the next header, so any
# regular dependency placed below it would be silently scoped to
# macOS only and vanish on every other target.
# Unix-only kill(2) syscall for `aidememo daemon stop`. Windows daemon stop
# is unimplemented (returns a clear error) — see cmd/daemon.rs.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[features]
default = ["sqlite"]
sqlite = ["aidememo-core/sqlite"]
redb = ["aidememo-core/redb"]
s3 = ["aidememo-core/s3"]
fastembed = ["aidememo-core/fastembed"]
# Replace the GlobalAlloc with dhat's instrumented allocator. The bin
# emits dhat-heap.json on exit (or when the Profiler guard drops),
# which https://nnethercote.github.io/dh_view/dh_view.html renders
# into a treemap of "live bytes by allocation site".
dhat-heap = ["dep:dhat"]
