[package]
name = "aidememo-ffi"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "aidememo_ffi"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["sqlite"]
sqlite = ["aidememo-core/sqlite"]
redb = ["aidememo-core/redb"]

[dependencies]
aidememo-core = { version = "0.1.0", path = "../aidememo-core", default-features = false, features = ["semantic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "allow"
