[package]
name = "aidememo-napi"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
build = "build.rs"

[lib]
name = "aidememo_napi"
crate-type = ["cdylib"]

[features]
default = ["sqlite"]
sqlite = ["aidememo-core/sqlite"]
redb = ["aidememo-core/redb"]

[dependencies]
aidememo-core = { version = "0.1.0", path = "../aidememo-core", default-features = false, features = ["semantic"] }
napi = { version = "3", features = ["napi6"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
