[package]
name = "aidememo-python"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "aidememo_python"
crate-type = ["cdylib"]

[dependencies]
aidememo-core = { path = "../aidememo-core", features = ["semantic"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
pythonize = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.23"
