[package]
name = "aidememo-python"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "aidememo_python"
crate-type = ["cdylib"]

[features]
default = ["sqlite"]
sqlite = ["aidememo-core/sqlite"]
redb = ["aidememo-core/redb"]

[dependencies]
aidememo-core = { version = "0.1.0", path = "../aidememo-core", default-features = false, features = ["semantic"] }
pyo3 = { version = "0.29", features = ["extension-module"] }
pythonize = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.29"
