[package]
name = "model2vec-native"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Taeyun Jang <taeyun16@pm.me>"]
description = "Zero-copy mmap-backed Model2Vec inference — drop-in API match for model2vec-rs with ~70% lower load-time heap"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taeyun16/model2vec-native"
documentation = "https://docs.rs/model2vec-native"
readme = "README.md"
keywords = ["model2vec", "embedding", "tokenizer", "mmap", "nlp"]
categories = ["science", "algorithms"]

[dependencies]
# Read-only mmap of safetensors weights — keeps the 489 MB matrix
# file-backed instead of copying it into the Rust heap.
memmap2 = "0.9"

# Zero-copy &[u8] → &[f32] re-interpretation. Required because the
# safetensors payload is little-endian f32 already; chunks_exact + map +
# collect (what model2vec-rs does) is a redundant ~500 MB allocation.
bytemuck = "1.16"

# Header parsing. SafeTensors itself is zero-copy when fed an existing
# byte slice — we feed it the mmap'd slice.
safetensors = "0.4"

# HuggingFace tokenizer — same crate model2vec-rs uses. Bumped to 0.22
# because v0.22.0 switched the unigram trie internally from std
# HashMap to ahash::AHashMap (PR #1799). The remaining per-node
# allocation overhead is tracked upstream in
# https://github.com/huggingface/tokenizers/pull/2039.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

# F16 fallback for quantized model variants (potion-base-2M / 4M).
half = "2.4"

# JSON config parsing (config.json's `normalize` flag).
serde_json = "1.0"

# HuggingFace download path — only pulled in when caller uses
# `from_pretrained_hub`. Zero cost for local-path usage.
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "native-tls"], optional = true }

# Standard error handling.
thiserror = "1.0"

[features]
default = ["hub"]
# Enable HuggingFace hub downloads. Off → loads only from local paths.
hub = ["dep:hf-hub"]

# This crate uses unsafe (mmap is fundamentally unsafe in Rust).
# memmap2's whole point is reading the mapped pages — there's no safe
# alternative to mmap on the OS API surface.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
todo = "warn"
dbg_macro = "deny"
