[package]
name = "wg-cli"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "wg"
path = "src/main.rs"

[dependencies]
wg-core = { path = "../wg-core", features = ["semantic", "semantic-adapt"] }
bpaf = { version = "0.9", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.0"
ulid = "1.1"
tempfile = "3.10"
walkdir = "2.4"
notify = "6.1"

# Async runtime + HTTP (for MCP server)
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tokio-stream = "0.1"
