[package]
name = "wg-cli"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "wg"
path = "src/main.rs"

[dependencies]
wg-core = { path = "../wg-core", features = ["semantic", "semantic-adapt"] }

# Profile-mode measurement for `wg bench`.
# - memory-stats: cross-platform RSS (includes virtual mappings — useful as a
#   broad upper bound but overstates real memory on mmap-heavy workloads).
# - cpu-time: process-level CPU user time.
# - peak_alloc: instruments the GlobalAlloc to track Rust heap-only bytes —
#   isolates application allocations from mmaped artifacts (model weights,
#   simsimd shared libs).
memory-stats = "1.2"
cpu-time = "1.0"
peak_alloc = "0.3"

# OS-native physical-memory metrics. macOS reports phys_footprint
# (compressed + swapped, excludes shared mmap pages); Linux exposes
# RssAnon via /proc/self/status, which excludes mmap'd files.
[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

bpaf = { version = "0.9", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.0"
ulid = "1.1"
tempfile = "3.10"
walkdir = "2.4"
notify = "6.1"

# Async runtime + HTTP (for MCP server)
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tokio-stream = "0.1"
