[package]
name = "wg-core"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
semantic = ["model2vec-native", "ureq", "simsimd", "instant-distance", "bincode"]
semantic-adapt = ["semantic"]
parallel = ["rayon"]
remote = ["oneio"]
s3 = ["aws-sdk-s3", "aws-credential-types", "tokio/full", "zstd"]

[dependencies]
# CLI 파싱
bpaf = { version = "0.9", features = ["derive"] }

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 설정
toml = "0.8"

# 영속 스토리지
redb = "2.0"

# 검색 엔진
bm25 = "0.2"

# SIMD 텍스트 검색
memchr = "2.5"

# 퍼지 매칭
strsim = "0.11"
trigram = "0.4"

# ID 생성
ulid = { version = "1.1", features = ["serde"] }

# 테이블 출력
comfy-table = "7.0"
chrono = "0.4"

# 시맨틱 검색 (선택)
# Zero-copy mmap variant of model2vec-rs — same API surface, the 489 MB
# embedding matrix stays file-backed instead of being copied twice into
# the heap. Lives in its own repo so it's reusable outside wg.
# Pinned to a specific rev for reproducibility; bump as needed.
model2vec-native = { git = "https://github.com/taeyun16/model2vec-native", rev = "254b304", optional = true }

# OpenAI-compatible HTTP embeddings (Ollama / OpenAI / OpenRouter / vLLM / LocalAI).
# Pulled in alongside the `semantic` feature so users who opt into semantic
# search get the choice between offline (Model2Vec) and pluggable HTTP.
ureq = { version = "2.12", features = ["json"], optional = true }

# Portable SIMD for dot/cosine/L2 with auto-dispatch (AVX2/NEON/AVX-512).
# Replaces the scalar cosine loop in semantic_search. Same feature gate as
# the rest of the semantic stack — offline default users get it for free
# whenever they opt into semantic search.
simsimd = { version = "6", optional = true }

# HNSW ANN index. Used as an alternative semantic candidate path
# when search.semantic_index = "hnsw" — replaces the BM25 prefilter
# top-50 with O(log N) graph traversal. Earned its keep on
# MIRACL/ko: +2.5pp R@10 vs BM25-prefilter, lower latency on
# corpora >= ~5k facts. See .notes/bench-hnsw.md.
instant-distance = { version = "0.6", features = ["with-serde"], optional = true }

# Compact binary serialization for the HNSW sidecar (model.hnsw.bin).
# JSON would balloon the file ~3-4×; bincode round-trips Vec<f32>
# at native float speed.
bincode = { version = "1.3", optional = true }

# LRU cache for query embeddings (Tier 7-A). Repeated queries skip the
# Model2Vec inference entirely. Tiny dep, well-maintained.
lru = "0.12"

# 병렬 처리 (선택)
rayon = { version = "1.8", optional = true }

# S3 공유 (선택)
oneio = { version = "0.20", optional = true }
aws-sdk-s3 = { version = "1.129.0", optional = true }
aws-credential-types = { version = "1.2.14", optional = true }
zstd = { version = "0.13.3", optional = true }
# Async runtime for optional S3 workflows
tokio = { version = "1.35", features = ["full"], optional = true }

# 에러 처리
thiserror = "1.0"
anyhow = "1.0"

# 공통
once_cell = "1.19"
parking_lot = "0.12"
bytes = "1.5"
tempfile = "3.10"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
