[package]
name = "wg-napi"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "wg_napi"
crate-type = ["cdylib"]

[dependencies]
wg-core = { path = "../wg-core" }
napi = "2"
serde = { version = "1.0", features = ["derive"] }
