[package]
name = "wg-napi"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
build = "build.rs"

[lib]
name = "wg_napi"
crate-type = ["cdylib"]

[dependencies]
wg-core = { path = "../wg-core" }
napi = "2"
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
